--- a/src/Todolist.css
+++ b/src/Todolist.css
@@ -73,3 +73,48 @@
     gap: 5px;
     color: #1877F2;
 }
+.ModalEditBodyinput1{
+    color: grey;
+    font-weight: 400;
+    padding: 3px 10px;
+    border-radius: 4px;
+    border: 1px solid grey;
+}
+.ModalEditBodyinput2{
+    background-color: #1DA1F2;
+    font-weight: 400;
+    color: white;
+    padding: 3px 10px;
+    border-radius: 4px;
+    border: 1px solid black;
+    outline: none;
+}
+.delModalBody{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.delModalBody input{
+    background-color: #1DA1F2;
+    font-weight: 400;
+    color: white;
+    padding: 3px 10px;
+    border-radius: 4px;
+    border: 1px solid black;
+}
+.editModal{
+    background-color: whitesmoke;
+}
+.delModal{
+    background-color: whitesmoke;
+}
+@media screen and (Max-width:700px) {
+    .editModal{
+        width: 70%;
+        padding: 100px 100px;
+    }
+    .delModal{
+        width: 70%;
+        padding: 100px 100px;
+    }
+}
