--- a/src/Todolist.css
+++ b/src/Todolist.css
@@ -73,14 +73,8 @@
     gap: 5px;
     color: #1877F2;
 }
-.ModalEditBodyinput1{
-    color: grey;
-    font-weight: 400;
-    padding: 3px 10px;
-    border-radius: 4px;
-    border: 1px solid grey;
-}
 .ModalEditBodyinput2{
+    font-size: 18px;
     background-color: #1DA1F2;
     font-weight: 400;
     color: white;
@@ -89,6 +83,10 @@
     border: 1px solid black;
     outline: none;
 }
+.ModalEditBodyinput2::placeholder {
+    color: white;
+    opacity: 0.8; 
+  }
 .delModalBody{
     display: flex;
     flex-direction: column;
@@ -108,6 +106,11 @@
 .delModal{
     background-color: whitesmoke;
 }
+.rotateSquare{
+    margin-left: 180px;
+    margin-bottom: 10px;
+}
+
 @media screen and (Max-width:700px) {
     .editModal{
         width: 70%;
